@@ -1,12 +1,17 @@
 use Module::Build;
 
-my $build = Module::Build->new
+my $build = Module::Build->new(
     module_name        => 'Apache::Dir',
     license            => 'perl',
     create_makefile_pl => 'passthrough',
     configure_requires => { 'Module::Build' => '0.2701' },
-    build_requires     => { 'Test::More'    => '0.17'   },
-    recommends         => { 'Test::Pod'     => '1.20'   },
-    requires           => { 'mod_perl'      => 0        },
-  );
+    recommends         => {
+        'Test::Pod'     => '1.20',
+        'mod_perl'      => 0,
+    },
+    build_requires     => {
+        'Module::Build' => '0.2701',
+        'Test::More'    => '0.17',
+    },
+);
 $build->create_build_script;
