@@ -50,7 +50,7 @@ AUTHOR
 
 COPYRIGHT AND LICENSE
 
-    Copyright 2004-2005 by David Wheeler
+    Copyright 2004-2008 by David Wheeler
 
     This library is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
